--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "pack": "react-scripts build && cp -r build/ dev/",
     "start": "react-scripts start",
+    "ssl": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
