--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "pack": "react-scripts build && cp -r build/ dev/",
-    "start": "react-scripts start",
-    "ssl": "REACT_APP_BACKEND_URL='//spymanz-be.herokuapp.com' HTTPS=true react-scripts start",
+    "start": "REACT_APP_DEV_MODE=true react-scripts start",
+    "ssl": "REACT_APP_BACKEND_URL='//spymanz-be.herokuapp.com' REACT_APP_DEV_MODE=true HTTPS=true react-scripts start",
     "build": "REACT_APP_BACKEND_URL='//spymanz-be.herokuapp.com' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
